--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Walter H. White</h1>
     <img
       height="200px"
-      src="https://static.wikia.nocookie.net/breakingbad/images/b/b4/Walter_2008.png/revision/latest/scale-to-width/360?cb=20200704164147"
+      src="https://static.wikia.nocookie.net/breakingbad/images/b/b4/Walter_2008.png"
       alt=""
     />
     <h2>Summary</h2>
